Added Shap values and minor changes

--- a/notebooks/4.XGBoost_training.ipynb
+++ b/notebooks/4.XGBoost_training.ipynb
@@ -295,6 +295,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7050ea45-4961-4a91-9c4e-eb8427998fb1",
+   "metadata": {},
+   "source": [
+    "## Create and save model with the best parameters"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "id": "a6c554e7-11bc-4b50-8e7d-4bd65c1781b7",
