--- a/notebooks/5.XGBoost_training_feature_selection.ipynb
+++ b/notebooks/5.XGBoost_training_feature_selection.ipynb
@@ -317,6 +317,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "074bc2ef-eea2-4a53-ab91-5f9625d05e0d",
+   "metadata": {},
+   "source": [
+    "## Create and save the best model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 20,
    "id": "a6c554e7-11bc-4b50-8e7d-4bd65c1781b7",
