--- a/notebooks/6.XGBoost_Calibration.ipynb
+++ b/notebooks/6.XGBoost_Calibration.ipynb
@@ -181,6 +181,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a8fe7655-e495-4577-918f-cb23f253e2cb",
+   "metadata": {},
+   "source": [
+    "It seems that our model is better calibrated on test data than train data."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "35c247b8-b11a-4a7e-9b33-fba48f62cf0a",
    "metadata": {},
    "source": [
@@ -310,7 +318,7 @@
    "id": "dff94e03-e7ba-41fe-b60e-a48e035b57e4",
    "metadata": {},
    "source": [
-    "We get better calibration than before"
+    "We get better calibration than before and calibration seems better for test dataset."
    ]
   },
   {
