--- a/notebooks/predictions.ipynb
+++ b/notebooks/predictions.ipynb
@@ -5,12 +5,20 @@
    "id": "4cefd1fa-7686-4ef4-a84e-0f77d137cca8",
    "metadata": {},
    "source": [
-    "## Predictions for created models"
+    "## Analyse created models"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5157b261-ccb5-48c6-90b9-bc2cd958ff67",
+   "metadata": {},
+   "source": [
+    "### Load libraries and data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "id": "35d9a641-f47a-4e5a-ab59-551d6b534196",
    "metadata": {},
    "outputs": [],
@@ -29,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "id": "4cbf9e3b-4039-4285-96f1-8dcac0ab9668",
    "metadata": {},
    "outputs": [],
@@ -40,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "id": "253e5b8f-8bb5-41fb-869f-f25c09140a36",
    "metadata": {},
    "outputs": [],
@@ -52,8 +60,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "53018f72-1cbf-4936-a093-593d95f09191",
+   "metadata": {},
+   "source": [
+    "### Load models"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "id": "42ed440a-2615-4f6d-a686-9bc802965a66",
    "metadata": {},
    "outputs": [],
@@ -63,10 +79,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "id": "04c44664-7cf9-40e9-bfdb-538a522d0ea3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/lib/python3.9/site-packages/xgboost/compat.py:36: FutureWarning: pandas.Int64Index is deprecated and will be removed from pandas in a future version. Use pandas.Index with the appropriate dtype instead.\n",
+      "  from pandas import MultiIndex, Int64Index\n"
+     ]
+    }
+   ],
    "source": [
     "model_path = os.path.join(os.environ['PWD'],'models')\n",
     "for filename in os.listdir(model_path):\n",
@@ -77,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "id": "e335a4e2-e179-4151-bbc1-6e32293d0e40",
    "metadata": {},
    "outputs": [],
@@ -93,8 +118,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "99c67438-1765-4128-99dd-86fcbb07e032",
+   "metadata": {},
+   "source": [
+    "### Metrics"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "id": "80b58994-b575-4f73-87f4-1f43d0976df3",
    "metadata": {},
    "outputs": [
@@ -224,7 +257,7 @@
        "xgboost_ros_selected.pkl          0.034918      0.079076  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,8 +267,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "402b914c-9b48-434d-884a-cc04868678bd",
+   "metadata": {},
+   "source": [
+    "Calibrated model gave the best metric values on Test data except recall score."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ba7938a7-b034-4904-8455-ec8c330c1a6c",
+   "metadata": {},
+   "source": [
+    "### Confusion matrix for calibrated XGBoost"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 19,
    "id": "3c602f7d-cf06-4e71-8036-6eb68e4d4503",
    "metadata": {},
    "outputs": [],
@@ -245,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 20,
    "id": "076e609a-6b08-4749-97cb-3be749dc0800",
    "metadata": {},
    "outputs": [
@@ -265,6 +314,14 @@
    "source": [
     "# Confusion matrix\n",
     "make_confusion_matrix(models[best_estimator],X_test,y_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0181a674-d9fd-4535-a424-c5a9169d7215",
+   "metadata": {},
+   "source": [
+    "### Save the best model for real-time prediction"
    ]
   },
   {
